manifests/postgres/test-postgres-client.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-client
  namespace: postgres
spec:
  containers:
    - name: postgresql-client
      image: postgres:15-alpine
      command: ['sh', '-c', 'sleep 3600']
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 256Mi
