manifests/postgres/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: postgres
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pgadmin
